[package]
name = "deesse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nt_utils = { path = "../nt_utils" }

#{ git = "https://github.com/hrafnskogr/nt_utils" }

[lib]
name = "deesse"
path = "src/lib.rs"

[[bin]]
name = "deesse_tester"
path = "src/bin/main.rs"
